# qtasks

./: .gitignore  .prospector.yaml  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: python-checks.yml
qtasks/: __init__.py  __main__.py  gtasks.py  servicemanager.py
qtasks/gtypes/: exceptions.py  raw_types.py  services.py  skeleton.py  task.py  tasklist.py
qtasks/gui/: __init__.py  form.ui  mainwindow.py  qtasks.pyproject  resources.qrc  scripts.py  ui.py  worker.py
qtasks/gui/assets/: resources.py
qtasks/manager/: __init__.py  config.py  servicemanager.py
tests/: test_qtasks.py  test_servicemanager.py  test_types.py
